@@ -12,12 +12,11 @@
 	<properties>
 		<javafx.version>21.0.2</javafx.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>21</maven.compiler.release>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
 
 	<dependencies>
-
-
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
@@ -39,38 +38,40 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.fxmisc.richtext</groupId>
 			<artifactId>richtextfx</artifactId>
-			<version>0.9.3</version>
+			<version>0.11.3</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-exec</artifactId>
-			<version>1.3</version>
+			<version>1.4.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.controlsfx</groupId>
 			<artifactId>controlsfx</artifactId>
 			<version>11.2.1</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4 -->
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4</artifactId>
-			<version>4.7.2</version>
+			<version>4.13.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.kordamp.ikonli</groupId>
 			<artifactId>ikonli-javafx</artifactId>
-			<version>11.3.3</version>
+			<version>12.3.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.kodedu.terminalfx</groupId>
 			<artifactId>terminalfx</artifactId>
@@ -80,11 +81,17 @@
 		<dependency>
 			<groupId>org.kordamp.ikonli</groupId>
 			<artifactId>ikonli-fontawesome-pack</artifactId>
-			<version>11.3.3</version>
+			<version>12.3.1</version>
 		</dependency>
 	</dependencies>
 
 	<repositories>
+		<repository>
+			<id>central</id>
+			<name>Maven Central</name>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+
 		<repository>
 			<id>terminalfx-repo</id>
 			<url>https://github.com/javaterminal/terminalfx/raw/master/releases</url>
@@ -94,29 +101,45 @@
 	<build>
 		<plugins>
 			<plugin>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-maven-plugin</artifactId>
-			<version>0.0.8</version>
-			<configuration>
-				<mainClass>zenit.Zenit</mainClass>
-				<executable>${java.home}/bin/java</executable>
-			</configuration>
-			<executions>
-				<execution>
-					<id>default-cli</id>
-					<configuration>
-						<executable>${java.home}/bin/java</executable>
-					</configuration>
-				</execution>
-			</executions>
-		</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<release>21</release>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.8</version>
+				<configuration>
+					<mainClass>zenit.Zenit</mainClass>
+					<executable>${java.home}/bin/java</executable>
+					<options>
+						<option>--add-opens</option>
+						<option>javafx.graphics/javafx.scene.text=ALL-UNNAMED</option>
+						<option>--add-opens</option>
+						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
+						<option>--add-exports</option>
+						<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+					</options>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-cli</id>
+						<configuration>
+							<executable>${java.home}/bin/java</executable>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
